--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 }
 
 body {
-    background-color: #a2836e;
+    background-color: #708090;
     background-repeat: no-repeat;
     font-family: 'Syne Mono', monospace;
 
