--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,3 +1,8 @@
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+    padding: 0;
+}
+
 .descriptionBlock {
     padding: 10px;
     color: white;
@@ -13,3 +18,12 @@
     border-radius: 20px;
     box-shadow: 6px 5px 7px rgba(255, 255, 255, 2);
 }
+
+.profileHeader {
+    display: flex;
+    justify-content: flex-start;
+  }
+
+  .profileHeader div {
+    margin-right: 15px;
+  }
