added redux-form, and login form

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 }
 
 body {
-    background-color: #708090;
+    background-color: #196e5c;
     background-repeat: no-repeat;
     font-family: 'Syne Mono', monospace;
 
