--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -1,57 +1,40 @@
 .dialogs {
-    display: grid;
-    grid-template-columns: 2fr 10fr;
-    grid-gap: 5px;
+    display: flex;
+    justify-content: space-between;
     padding: 20px;
 }
 
-.dialogsItems {
-    color: white;
-    border: 2px solid #146EB4;
-    border-radius: 20px;
-    margin-top: 20px;
-    background: #674d3c;
+a {
+    text-decoration: none;
+}
+
+.title {
+    color: #593522;
 }
 
 .dialogsItems .active {
     color: green;
     padding: 10px;
     font-size: 20px;
-
-    }
-
-.messages {
-    padding: 10px;
-    margin-top: 20px;
-    border: 2px solid #146EB4;
-    border-radius: 20px;
 }
 
 .messages .message {
-    color: white;
-    border: 1px solid #146EB4;
-    border-radius: 20px;
-    max-width: 200px;
+    color: #593522;
+    display: flex;
+    justify-content: flex-end;
     padding: 10px;
-    margin: 3px;
-    background: #674d3c;
-    box-shadow: 6px 5px 7px rgba(255, 255, 255, 2);
+    font-size: 20px;
 }
 
-.newMessageText {
-    width: 635px;
-    background-color: #8d9db6;
-    margin-left: 25px;
-    resize: none;
+.btnWrapper {
+    display: flex;
+    justify-content: flex-start;
 }
 
-.newMessageBtn {
-    margin: 15px 15px 15px 600px;
-    font-weight: 600;
-    padding: 5px;
+.messageForm  {
+    text-align: left;
+    margin-left: 30px;
 }
 
-.newMsgBlock {
-    display: block;
-    margin-top: 15px;
-}
+
+
