--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,28 +1,35 @@
 .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    grid-area: h;
-    background-color: black;
+    position: relative;
+    /* background-color: rgb(89, 53, 34); */
+    background-color: #dee6cb;
     max-width: 1200px;
-    border-radius: 15px;
-    box-shadow: 6px 5px 7px rgba(255, 255, 255, 2);
+    border-radius: 10px;
+    -webkit-box-shadow: 0px 12px 48px -5px rgba(59, 62, 37, 0.1);
+    -moz-box-shadow: 0px 12px 48px -5px rgba(59, 62, 37, 0.1);
+    box-shadow: 0px 12px 48px -5px rgba(59, 62, 37, 0.1);
+    margin-top: 5px;
 }
 
 .header img {
     width: 100px;
-    margin: 0px 0px 15px 15px;
+    margin: 0px 0px 15px 23px;
 }
 
+
+
 .mainTitle {
-    font-family: 'Syne Mono', monospace;
     font-size: 46px;
     letter-spacing: 10px;
-    color: #146EB4;
+    color: #593522;
+    padding: 15px 0 15px 20px;
+    text-align: center;
 }
 
 .loginBlock {
-    color: white;
+    position: absolute;
+    top: 32px;
+    right: 0;
+    color: #593522;
     margin-right: 15px;
 }
 
