--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,27 +1,38 @@
 .nav {
-    grid-area: n;
-    background-color: #292F33;
+    background-color: transparent;
     padding: 20px;
-    min-width: 250px;
-    min-height: 300px;
+    min-width: 10vw;
+    height: 100%;
     line-height: 30px;
-    font-family: Roboto, sans-serif;
+    font-family: 'Syne Mono', monospace;
     font-size: 20px;
-    border-radius: 20px;
-    box-shadow: 6px 5px 7px rgba(255, 255, 255, 2);
+    border-radius: 5px;
+    /* box-shadow: 2px 2px 4px #292F33; */
+}
+
+.item {
+    padding: 5px 5px;
+    transition: 0.2s;
 }
 
 .item a {
     text-decoration: none;
-    color: #ffffff;
+    color: #593522;
     opacity: unset;
     padding: 5px;
+    transition: 0.2s;
+}
+
+.item:hover {
+    background-color: #d0d8bd;
 }
 
 .item a:hover {
-    border: 1px solid #ffc345;
+    color: #555e0a;
+    
+    /* border: 1px solid #ceddf3; */
 }
 
 .item a.activeLink {
-    color: #ff6f69;
+    color: #0a6111;
 }
