--- a/src/components/Profile/My Posts/MyPosts.module.css
+++ b/src/components/Profile/My Posts/MyPosts.module.css
@@ -1,22 +1,34 @@
-.postsBlock {
-    padding: 10px;
+.messageFormWrapper {
+    display: flex;
+    justify-content: flex-start;
+}
+
+textarea {
+    width: 400px;
+    min-height: 10vh;
+    resize: none;
+}
+
+.btnWrapper {
+    display: flex;
+    justify-content: flex-start;
 }
 
 .posts {
     margin-top: 10px;
+    text-align: left;
 }
 
-textarea {
-    width: 850px;
-    background-color: #8d9db6;
+.profileInfoDescription {
+    display: flex;
+    justify-content: flex-start;
 }
 
-.addPostBtn {
-    margin: 15px 15px 15px 0;
-    font-weight: 600;
-    padding: 5px;
+.postsBlock {
+    text-align: left;
 }
 
 .myPostsTitle {
-    margin: 10px;
+    text-align: left;
+    color: #593522;
 }
