--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -4,12 +4,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .descriptionBlock {
-    padding: 10px;
-    color: white;
-    border: 2px solid #146EB4;
-    border-radius: 20px;
-    max-width: 895px;
-    box-shadow: 6px 5px 7px rgba(255, 255, 255, 2);
+    text-align: left;
+    
 }
 
 .topBg {
@@ -24,6 +20,6 @@ h1, h2, h3, h4, h5, h6 {
     justify-content: flex-start;
   }
 
-  .profileHeader div {
-    margin-right: 15px;
-  }
+.profileHeader div {
+margin-right: 15px;
+}
