--- a/src/components/common/FormControl/FormControl.module.css
+++ b/src/components/common/FormControl/FormControl.module.css
@@ -14,3 +14,22 @@
   color: red;
   margin-top: 5px;
 }
+
+form input {
+  width: 195px;
+  padding: 5px;
+}
+
+button {
+  padding: 8px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  transition: 0.3s;
+  outline: none;
+}
+
+button:hover {
+  color: #0a6111;
+  box-shadow: 0px 0px 7px 2px rgba(59, 62, 37, 0.4);
+}
