--- a/src/components/common/Paginator/Paginator.module.css
+++ b/src/components/common/Paginator/Paginator.module.css
@@ -25,3 +25,16 @@
 .selectedPage:hover {
   cursor: pointer;
 }
+
+.paginator {
+  margin: 10px;
+}
+.pageNumber {
+  padding: 2px;
+  border: 1px solid grey;
+}
+
+.pageNumber.selectedPage {
+  font-weight: bold;
+  border-color: black;
+}
